--- a/templates/fitxa_llibre.html.twig
+++ b/templates/fitxa_llibre.html.twig
@@ -10,7 +10,7 @@
 <br>
 <li><i>{{ llibre.autor }}</i></li>
 <br>
-<li>{{ llibre.pàgines }} pàgines</li>
+<li>{{ llibre.pagines }} pàgines</li>
 </ul>
 <a href ="{{ path('inici') }}">Torna a l'inici</a>
 <img class="fletxa" src="{{ absolute_url(asset('img/fletxa.png')) }}"/>
