--- a/templates/inici.html.twig
+++ b/templates/inici.html.twig
@@ -2,6 +2,8 @@
 {% block title %}Llibres{% endblock %}
 {% block body %}
 <h1>Biblioteca Personal David Ivars Oliver</h1>
+<h1>{{date}}</h1>
+
 
 <p>Pàgina d'inici</p>
 <p>Projecte Symfony 2n DAW</p>
